# animated-video-thumbnails

./: .gitignore  README.md  cli.py  example.py  examples.py  main.py  pyproject.toml  test_cli.py
src/: __init__.py
src/cli/: __init__.py  commands.py  parser.py  utils.py
src/config/: __init__.py  defaults.py
src/core/: __init__.py  functions.py  processing.py
src/io/: __init__.py  gif_io.py  video_io.py
src/metadata/: __init__.py  extraction.py
src/pipeline/: __init__.py  main_pipeline.py
src/types/: __init__.py  models.py
